--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,10 @@
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${version.plugin.jetty}</version>
                 <configuration>
-                    <!-- On some configs this causes shutdown of context on -->
-                    <!-- a page load so disabled. -->
-                    <!-- <reload>automatic</reload> -->
-                    <!-- <scanIntervalSeconds>1</scanIntervalSeconds> -->
+<!--                     On some configs this causes shutdown of context on -->
+<!--                     a page load so disabled. -->
+                     <reload>automatic</reload>
+                     <scanIntervalSeconds>1</scanIntervalSeconds>
                 </configuration>
             </plugin>
         </plugins>
