--- a/pom.xml
+++ b/pom.xml
@@ -133,5 +133,10 @@
             <artifactId>commons-chain</artifactId>
             <version>1.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.mortbay.jetty</groupId>
+            <artifactId>jetty-util</artifactId>
+            <version>6.1.25</version>
+        </dependency>
     </dependencies>
 </project>
